@@ -1,3 +1,6 @@
+- urpmi:
+  o fix displaying "bad signature" in non-utf8 (#44587)
+
 Version 6.15 - 7 October 2008
 
 - urpmi, rpmdrake:
